# BlinkBids-Backend

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
BlinkBids/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
account/: admin.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
carts/: admin.py  models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_remove_cartitems_total_items.py  0003_alter_cartitems_price.py  0004_alter_cart_user.py  0005_alter_cart_user_order_orderitem.py  0006_remove_order_total_price_alter_orderitem_order.py  0007_remove_cart_total_price_alter_cartitems_cart.py  0008_remove_cartitems_price_remove_orderitem_price.py  0009_order_is_paid_order_payment_method.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/management/commands/: add_dummy_data.py  import_images.py
product/migrations/: 0001_initial.py  0002_alter_product_images.py  0002_product_slug_remove_product_images_productimage_and_more.py  0003_remove_productimage_product.py  0004_alter_product_category_alter_product_images.py
templates/: home.html  main.html  navbar.html
