[tool.poetry]
name = "blinkbids"
version = "0.1.0"
description = ""
authors = ["binisha-banjara <rubiks1200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
